python-project/templates/python-app-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: python-app-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: 'localhost'
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: python-project-service
            port:
              number: 80
